# miraitrace2

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: analysis.rs  app.rs  app_types.rs  autofocus.rs  dna.rs  engine.rs  engine_thread.rs  fitness.rs  geom.rs  main.rs  mutate.rs  mutation_config.rs  render.rs  settings.rs
src/engine/: metrics.rs  mod.rs  mutations.rs  optimizer.rs  progressive.rs
src/fitness/: metrics.rs  mod.rs  perceptual.rs  pyramid.rs  sad.rs  tiling.rs
src/ui/: image_panel.rs  input.rs  mod.rs  overlays.rs  settings_window.rs  status_bar.rs  toolbar.rs
